# c--uni-projects

./: App.cpp  Documentations  Queue.cpp  README.md  Stack.h  text
916Exam/: CMakeLists.txt  main.cpp
916Exam/business/: GeneService.cpp  GeneService.h
916Exam/domain/: Gene.cpp  Gene.h  GeneDTO.cpp  GeneDTO.h
916Exam/errors/: GeneError.cpp  GeneError.h  RepoError.cpp  RepoError.h
916Exam/persistence/: Repo.cpp  Repo.h
916Exam/presentation/: Console.cpp  Console.h
916Exam/tests/: Tests.cpp  Tests.h
L3/: App.cpp  Queue.cpp  Queue.h  Stack.cpp
